PCI code more readable